Fix spacing in product description header

--- a/frontend/src/components/Product.scss
+++ b/frontend/src/components/Product.scss
@@ -6,6 +6,7 @@
 
   &-header {
     &-description {
+      margin-top: var(--spacing-big);
       margin-bottom: var(--spacing-big);
       font-size: 1.75rem;
     }
@@ -47,6 +48,5 @@
 
   &-btn-buy {
       width: 100%;
-      margin-bottom: var(--spacing-big);
   }
 }
